# anater_fomento

./: Dockerfile  Makefile  README.md  pyproject.toml
fomento_repeat/: config.py  main.py  resources.py
fomento_repeat/routers/: fomento.py  hello.py
tests/: conftest.py
