[tool.poetry]
name = "V2 Fomento"
version = "0.1.0"
description = ""
authors = ["Leslier Soares Corrêa <leslier.correa@tellus.tec.br>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "^0.101.1"
hypercorn = "^0.14.4"
loguru = "^0.7.0"
orjson = "^3.9.5"
python = "^3.11"
python-dotenv = "^1.0.0"
uvloop = "^0.17.0"
python-multipart = "^0.0.6"
urllib3 = "^2.0.4"
certifi = "^2023.7.22"

[tool.poetry.dev-dependencies]
asgi-lifespan = "^2.1.0"
alt-pytest-asyncio = "^0.7.1"
blue = "^0.9.1"
httpx = "^0.24.1"
mypy = "^1.4.1"
pip-audit = "^2.6.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.280"

[tool.blue]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
#disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]

ignore = ["INP001", # implicit-namespace-package
    "ANN",    # type annotations
    "T20",    # flake8-print (warns when there are print statements)
#    "ARG001", # unused-argument
    "D212", # See https://github.com/charliermarsh/ruff/issues/2281
    "D211", # See https://github.com/charliermarsh/ruff/issues/2281
    "B008", "I001", "B010"
]

target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "PLR2004", "S"]
"smoke_test.py" = ["S"]
